<resources>
    <string name="app_name">Make Me Zen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_enable_usage">Here is how to get started: </string>
    <string name="subtitle_enable_usage">"So, here’s how we can get  started: "</string>
    <string name="bullet">\u2022 </string>
    <string name="instruction1_enable_usage">Tap \"Enable Usage Access\"</string>
    <string name="instruction2_enable_usage">Find \"Make Me Zen\" in the list and click on it</string>
    <string name="instruction3_enable_usage">Toggle the button</string>
    <string name="be_more_mindful">Be more mindful</string>
    <string name="why_enable">We will remind you on a periodic basis of your phone usage patterns.</string>
    <string name="font_name">Make Me Zen</string>
    <string name="positive_text">Be Mindful! Be Productive!</string>
    <string name="notify_example">"Yesterday, you were on your phone for 30 mins less than the day before! Great Job! "</string>
    <string name="notify_example_2">"Time is the most valuable thing a person can spend. Spend your time on your phone wisely!"</string>
    <string name="enable_usage_access">ENABLE USAGE ACCESS</string>
    <string name="enable_notifications">CONTINUE</string>
    <string name="ill_do_it_later">I\'LL DO IT LATER</string>
    <string name="file_key">com.timeto.makemezen.GET_DAILY_USED_DATA</string>
</resources>
