<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EnableNotifications">

    <!--<ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:src="@drawable/ic_enable_notifications_background" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="54dip">

        <!--  Top half of the section - other than the button  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dip"
                android:layout_marginRight="32dip"
                android:layout_marginBottom="20dip"
                android:fontFamily="@font/proxima_nova_regular"
                android:text="@string/be_more_mindful"
                android:letterSpacing="0.02"
                android:textSize="28dip"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dip"
                android:layout_marginRight="32dip"
                android:layout_marginBottom="56dp"
                android:fontFamily="@font/proxima_nova_regular"
                android:text="@string/why_enable"
                android:letterSpacing="0.01"
                android:textSize="15dip" />

            <!--  Fake notification box  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="28dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:elevation="5dp"
                android:background="@drawable/rectangle"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">
                    
                    <View
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/square"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/font_name"
                        android:layout_marginLeft="8dp"
                        android:fontFamily="@font/proxima_nova_bold"
                        android:textColor="@color/black"
                        android:textSize="13dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notify_example"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:textColor="@color/black"
                    android:textSize="14dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="28dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:elevation="5dp"

                android:background="@drawable/rectangle"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

        <!--  Bottom section of the app - includes the button  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <Button
                android:id="@+id/enable_notifs_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_regular"
                android:textSize="13dip"
                android:paddingHorizontal="@dimen/button_padding_horizontal"
                android:paddingVertical="@dimen/button_padding_vertical"
                android:textColor="@color/white"
                android:text="@string/enable_notifications"
                android:stateListAnimator="@null"
                android:letterSpacing="0.15"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:background="@drawable/button_rounded"/>

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/proxima_nova_regular"-->
<!--                android:textSize="13dp"-->
<!--                android:layout_marginTop="32dp"-->
<!--                android:letterSpacing="0.15"-->
<!--                android:text="@string/ill_do_it_later"/>-->

        </LinearLayout>

    </LinearLayout>


</FrameLayout>